--- a/index.html
+++ b/index.html
@@ -102,87 +102,33 @@
                             <div data-day="4" style="border: none;">
                                 <span class="booking clip-2" style="background: #FFFC44;" data-toggle="tooltip" data-placement="bottom" title="Booking 2"></span>
                             </div>
-                            <div data-day="5">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="6">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="7">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="8">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="9">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="10">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="11">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="12">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="13">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="14">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="15">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="16">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="17">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="18">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="19">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="20">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="21">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="22">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="23">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="24">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="25">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="26">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="27">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="28">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="29">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="30">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="31">
-                                <span class="booking"></span>
-                            </div>
+                            <div data-day="5"></div>
+                            <div data-day="6"></div>
+                            <div data-day="7"></div>
+                            <div data-day="8"></div>
+                            <div data-day="9"></div>
+                            <div data-day="10"></div>
+                            <div data-day="11"></div>
+                            <div data-day="12"></div>
+                            <div data-day="13"></div>
+                            <div data-day="14"></div>
+                            <div data-day="15"></div>
+                            <div data-day="16"></div>
+                            <div data-day="17"></div>
+                            <div data-day="18"></div>
+                            <div data-day="19"></div>
+                            <div data-day="20"></div>
+                            <div data-day="21"></div>
+                            <div data-day="22"></div>
+                            <div data-day="23"></div>
+                            <div data-day="24"></div>
+                            <div data-day="25"></div>
+                            <div data-day="26"></div>
+                            <div data-day="27"></div>
+                            <div data-day="28"></div>
+                            <div data-day="29"></div>
+                            <div data-day="30"></div>
+                            <div data-day="31"></div>
                         </div>
                     </div>
 
@@ -194,30 +140,14 @@
                     </div>
                     <div class="calendar__bookings-items">
                         <div class="calendar__date-dates">
-                            <div data-day="1">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="2">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="3">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="4">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="5">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="6">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="7">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="8">
-                                <span class="booking"></span>
-                            </div>
+                            <div data-day="1"></div>
+                            <div data-day="2"></div>
+                            <div data-day="3"></div>
+                            <div data-day="4"></div>
+                            <div data-day="5"></div>
+                            <div data-day="6"></div>
+                            <div data-day="7"></div>
+                            <div data-day="8"></div>
                             <div data-day="9" style="border-bottom: none;">
                                 <span class="booking clip-4" style="background: #210CA5;" data-toggle="tooltip" data-placement="top" title="Booking 3"></span>
                             </div>
@@ -230,30 +160,14 @@
                             <div data-day="12" style="border: none;">
                                 <span class="booking clip-2" style="background: #210CA5;" data-toggle="tooltip" data-placement="top" title="Booking 3"></span>
                             </div>
-                            <div data-day="13">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="14">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="15">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="16">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="17">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="18">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="19">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="20">
-                                <span class="booking"></span>
-                            </div>
+                            <div data-day="13"></div>
+                            <div data-day="14"></div>
+                            <div data-day="15"></div>
+                            <div data-day="16"></div>
+                            <div data-day="17"></div>
+                            <div data-day="18"></div>
+                            <div data-day="19"></div>
+                            <div data-day="20"></div>
                             <div data-day="21" style="border-bottom: none;">
                                 <span class="booking clip-4" style="background: #0CA589;" data-toggle="tooltip" data-placement="top" title="Booking 3"></span>
                             </div>
@@ -269,24 +183,12 @@
                             <div data-day="25" style="border: none;">
                                 <span class="booking clip-2" style="background: #0CA589;" data-toggle="tooltip" data-placement="top" title="Booking 3"></span>
                             </div>
-                            <div data-day="26">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="27">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="28">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="29">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="30">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="31">
-                                <span class="booking"></span>
-                            </div>
+                            <div data-day="26"></div>
+                            <div data-day="27"></div>
+                            <div data-day="28"></div>
+                            <div data-day="29"></div>
+                            <div data-day="30"></div>
+                            <div data-day="31"></div>
                         </div>
                     </div>
 
@@ -298,45 +200,19 @@
                     </div>
                     <div class="calendar__bookings-items">
                         <div class="calendar__date-dates">
-                            <div data-day="1">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="2">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="3">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="4">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="5">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="6">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="7">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="8">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="9">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="10">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="11">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="12">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="13">
-                                <span class="booking"></span>
-                            </div>
+                            <div data-day="1"></div>
+                            <div data-day="2"></div>
+                            <div data-day="3"></div>
+                            <div data-day="4"></div>
+                            <div data-day="5"></div>
+                            <div data-day="6"></div>
+                            <div data-day="7"></div>
+                            <div data-day="8"></div>
+                            <div data-day="9"></div>
+                            <div data-day="10"></div>
+                            <div data-day="11"></div>
+                            <div data-day="12"></div>
+                            <div data-day="13"></div>
                             <div data-day="14" style="border-bottom: none;">
                                 <span class="booking clip-4" style="background-color: crimson;"></span>
                             </div>
@@ -364,33 +240,15 @@
                             <div data-day="22" style="border: none;">
                                 <span class="booking clip-2" style="background-color: crimson;"></span>
                             </div>
-                            <div data-day="23">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="24">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="25">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="26">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="27">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="28">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="29">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="30">
-                                <span class="booking"></span>
-                            </div>
-                            <div data-day="31">
-                                <span class="booking"></span>
-                            </div>
+                            <div data-day="23"></div>
+                            <div data-day="24"></div>
+                            <div data-day="25"></div>
+                            <div data-day="26"></div>
+                            <div data-day="27"></div>
+                            <div data-day="28"></div>
+                            <div data-day="29"></div>
+                            <div data-day="30"></div>
+                            <div data-day="31"></div>
                         </div>
                     </div>
                 </div>
