--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <main>
@@ -24,12 +25,12 @@
                     </select>
                 </div>
                 <div class="calendar__actions-date-view">
-                    <p class="m-0">1 Ene 21 - 31 - Ene 21</p>
+                    <p class="m-0" id="calendar-text">1 Ene 21 - 31 Ene 21</p>
                 </div>
                 <div class="calendar__actions-switch-date">
-                    <span><</span>
-                    <span>Hoy</span>
-                    <span>></span>
+                    <span id="btnLeft"><i class="fa fa-chevron-left"></i></span>
+                    <span id="btnCurrent">Hoy</span>
+                    <span id="btnRight"><i class="fa fa-chevron-right"></i></span>
                 </div>
             </div>
 
@@ -42,42 +43,10 @@
                         <span>Item 2</span>
                     </div>
                     <div class="calendar__date-container">
-                        <div class="calendar__date-title">
+                        <div class="calendar__date-title" id="calendar-monthTitle">
                             ENE
                         </div>
-                        <div class="calendar__date-dates">
-                            <span>1</span>
-                            <span>2</span>
-                            <span>3</span>
-                            <span>4</span>
-                            <span>5</span>
-                            <span>6</span>
-                            <span>7</span>
-                            <span>8</span>
-                            <span>9</span>
-                            <span>10</span>
-                            <span>11</span>
-                            <span>12</span>
-                            <span>13</span>
-                            <span>14</span>
-                            <span>15</span>
-                            <span>16</span>
-                            <span>17</span>
-                            <span>18</span>
-                            <span>19</span>
-                            <span>20</span>
-                            <span>21</span>
-                            <span>22</span>
-                            <span>23</span>
-                            <span>24</span>
-                            <span>25</span>
-                            <span>26</span>
-                            <span>27</span>
-                            <span>28</span>
-                            <span>29</span>
-                            <span>30</span>
-                            <span>31</span>
-                        </div>
+                        <div class="calendar__date-dates" id="calendar__days"></div>
                     </div>
                 </div>
                 <div class="calendar__container-body">
@@ -88,8 +57,8 @@
                         <span>Item 2</span>
                     </div>
                     <div class="calendar__bookings-items">
-                        <div class="calendar__date-dates">
-                            <div data-day="1" style="border-bottom: none;">
+                        <div class="calendar__date-dates booking-days">
+                            <!-- <div data-day="1" style="border-bottom: none;">
                                 <span class="booking clip-4" style="background: #A50CA0;" data-toggle="tooltip" data-placement="top" title="Booking 1"></span>
                             </div>
                             <div data-day="2" style="border: none;">
@@ -128,7 +97,7 @@
                             <div data-day="28"></div>
                             <div data-day="29"></div>
                             <div data-day="30"></div>
-                            <div data-day="31"></div>
+                            <div data-day="31"></div> -->
                         </div>
                     </div>
 
@@ -139,8 +108,8 @@
                         <span>Item 2</span>
                     </div>
                     <div class="calendar__bookings-items">
-                        <div class="calendar__date-dates">
-                            <div data-day="1"></div>
+                        <div class="calendar__date-dates booking-days">
+                            <!-- <div data-day="1"></div>
                             <div data-day="2"></div>
                             <div data-day="3"></div>
                             <div data-day="4"></div>
@@ -188,7 +157,7 @@
                             <div data-day="28"></div>
                             <div data-day="29"></div>
                             <div data-day="30"></div>
-                            <div data-day="31"></div>
+                            <div data-day="31"></div> -->
                         </div>
                     </div>
 
@@ -199,8 +168,8 @@
                         <span>Item 2</span>
                     </div>
                     <div class="calendar__bookings-items">
-                        <div class="calendar__date-dates">
-                            <div data-day="1"></div>
+                        <div class="calendar__date-dates booking-days">
+                            <!-- <div data-day="1"></div>
                             <div data-day="2"></div>
                             <div data-day="3"></div>
                             <div data-day="4"></div>
@@ -248,7 +217,67 @@
                             <div data-day="28"></div>
                             <div data-day="29"></div>
                             <div data-day="30"></div>
-                            <div data-day="31"></div>
+                            <div data-day="31"></div> -->
+                        </div>
+                    </div>
+
+                    <div class="calendar__container-item-1">
+                        <span>Item 1</span>
+                    </div>
+                    <div class="calendar__container-item-2">
+                        <span>Item 2</span>
+                    </div>
+                    <div class="calendar__bookings-items">
+                        <div class="calendar__date-dates booking-days">
+                            <!-- <div data-day="1"></div>
+                            <div data-day="2"></div>
+                            <div data-day="3"></div>
+                            <div data-day="4"></div>
+                            <div data-day="5"></div>
+                            <div data-day="6"></div>
+                            <div data-day="7"></div>
+                            <div data-day="8"></div>
+                            <div data-day="9"></div>
+                            <div data-day="10"></div>
+                            <div data-day="11"></div>
+                            <div data-day="12"></div>
+                            <div data-day="13"></div>
+                            <div data-day="14" style="border-bottom: none;">
+                                <span class="booking clip-4" style="background-color: crimson;"></span>
+                            </div>
+                            <div data-day="15" style="border: none;">
+                                <span class="booking" style="background-color: crimson;"></span>
+                            </div>
+                            <div data-day="16" style="border: none;">
+                                <span class="booking" style="background-color: crimson;"></span>
+                            </div>
+                            <div data-day="17" style="border: none;">
+                                <span class="booking" style="background-color: crimson;"></span>
+                            </div>
+                            <div data-day="18" style="border: none;">
+                                <span class="booking" style="background-color: crimson;"></span>
+                            </div>
+                            <div data-day="19" style="border: none;">
+                                <span class="booking" style="background-color: crimson;"></span>
+                            </div>
+                            <div data-day="20" style="border: none;">
+                                <span class="booking" style="background-color: crimson;"></span>
+                            </div>
+                            <div data-day="21" style="border: none;">
+                                <span class="booking" style="background-color: crimson;"></span>
+                            </div>
+                            <div data-day="22" style="border: none;">
+                                <span class="booking clip-2" style="background-color: crimson;"></span>
+                            </div>
+                            <div data-day="23"></div>
+                            <div data-day="24"></div>
+                            <div data-day="25"></div>
+                            <div data-day="26"></div>
+                            <div data-day="27"></div>
+                            <div data-day="28"></div>
+                            <div data-day="29"></div>
+                            <div data-day="30"></div>
+                            <div data-day="31"></div> -->
                         </div>
                     </div>
                 </div>
@@ -259,11 +288,97 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+    <!-- <script src="js/moment.min.js"></script> -->
+    <script src="js/moment-locale.js"></script>
 
     <script>
         $(function () {
             $('[data-toggle="tooltip"]').tooltip()
         });
+
+        moment.locale('es');
+
+        let cMonth = new Date().getMonth();
+
+        const afterMonth = () => {
+            cMonth--;
+
+            printDays(cMonth);
+        }
+
+        const nextMonth = () => {
+            cMonth++;
+
+            printDays(cMonth);
+        }
+
+        const currentMonth = () => {
+            cMonth = new Date().getMonth();
+
+            printDays(cMonth);
+        }
+
+        const printDays = (month) => {
+            const ttlDays = moment().endOf('month').add(month, "month").format("DD");
+            const eDays = document.querySelector('#calendar__days');
+
+            eDays.innerHTML = '';
+
+            for (let i = 0; i < ttlDays; i++) {
+                const eSpan = document.createElement('span');
+                eSpan.innerHTML = `${i + 1}`;
+
+                eDays.appendChild(eSpan);
+            }
+
+            printTxtDate(ttlDays, month)
+            printBookings(ttlDays);
+        }
+
+        const printTxtDate = (ttlDays, month) => {
+            const eTextDate = document.getElementById('calendar-text');
+            const eMonthTitle = document.getElementById('calendar-monthTitle');
+            const txtMonth = moment().add(month, "month").format("MMMM");
+            const txtYear = moment().add(month, "month").format("YYYY");
+
+            eTextDate.innerText = `1 ${txtMonth} ${txtYear} - ${ttlDays} ${txtMonth} ${txtYear}`;
+            eMonthTitle.innerText = `${txtMonth.toUpperCase()}`
+        }
+
+        const printBookings = (days) => {
+            const eDaysBooking = document.querySelectorAll('.booking-days');
+
+            setStyGridTempCol(days);
+
+            eDaysBooking.forEach(e => {
+                e.innerHTML = '';
+
+                for (let i = 0; i < days; i++) {
+                    const eDiv = document.createElement('div');
+
+                    e.appendChild(eDiv);
+                }
+            })
+        }
+
+        const setStyGridTempCol = (days) => {
+            const eGrid = document.querySelectorAll('.calendar__date-dates');
+
+            eGrid.forEach(e => {
+                e.style.gridTemplateColumns = "repeat(" + days  + ", 1fr)";
+            })
+        }
+
+        printDays(cMonth)
+
+        const btnRight = document.querySelector('#btnRight');
+        const btnLeft = document.querySelector('#btnLeft');
+        const btnCurrent = document.querySelector('#btnCurrent');
+
+        btnRight.addEventListener('click', nextMonth);
+        btnLeft.addEventListener('click', afterMonth);
+        btnCurrent.addEventListener('click', currentMonth);
+
     </script>
 </body>
 </html>
