creemos que ya esta terminado gg

--- a/index.html
+++ b/index.html
@@ -25,11 +25,9 @@
 			<div class="calendar__container">
 				<div class="calendar__actions">
 					<div class="calendar__actions-switch-view">
-						Mostrar
-						<select name="" id="">
-							<option value="0">Valor 1</option>
-							<option value="1">Valor 2</option>
-							<option value="2">Valor 3</option>
+						<span>Filtro</span>
+						<select id="filter" value="0" class="form-control">
+							<option value="all">Mostrar todos</option>
 						</select>
 					</div>
 					<div class="calendar__actions-date-view">
@@ -56,47 +54,7 @@
 						</div>
 					</div>
 
-					<div class="calendar__container-body">
-						<!-- <div class="calendar__container-item-1">
-							<span>Presidencial</span>
-						</div>
-						<div class="calendar__container-item-2">
-							<span>200</span>
-						</div>
-						<div class="calendar__bookings-items">
-							<div class="calendar__date-dates booking-days"></div>
-						</div>
-
-						<div class="calendar__container-item-1">
-							<span>Presidencial</span>
-						</div>
-						<div class="calendar__container-item-2">
-							<span>201</span>
-						</div>
-						<div class="calendar__bookings-items">
-							<div class="calendar__date-dates booking-days"></div>
-						</div>
-
-						<div class="calendar__container-item-1">
-							<span>Sencilla</span>
-						</div>
-						<div class="calendar__container-item-2">
-							<span>100</span>
-						</div>
-						<div class="calendar__bookings-items">
-							<div class="calendar__date-dates booking-days"></div>
-						</div>
-
-						<div class="calendar__container-item-1">
-							<span>Sencilla</span>
-						</div>
-						<div class="calendar__container-item-2">
-							<span>101</span>
-						</div>
-						<div class="calendar__bookings-items">
-							<div class="calendar__date-dates booking-days"></div>
-						</div> -->
-					</div>
+					<div class="calendar__container-body"></div>
 				</div>
 			</div>
 		</main>
