--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 		<title>Rooms Calendar</title>
 		<link rel="stylesheet" href="./css/styles.css" />
 		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
 			rel="stylesheet"
-			href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-			integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+			integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
 			crossorigin="anonymous"
 		/>
 		<link
@@ -26,7 +26,7 @@
 				<div class="calendar__actions">
 					<div class="calendar__actions-switch-view">
 						<span>Filtro</span>
-						<select id="filter" value="0" class="form-control">
+						<select id="filter" value="0" class="form-select">
 							<option value="all">Mostrar todos</option>
 						</select>
 					</div>
@@ -56,30 +56,22 @@
 
 					<div class="calendar__container-body"></div>
 					<div class="calendar-loading">
-						<i class="ace-icon fa fa-spinner fa-spin blue bigger-125"></i> Cargando
+						<i class="ace-icon fa fa-spinner fa-spin blue bigger-125"></i>
+						Cargando
 					</div>
 				</div>
 			</div>
 		</main>
 
 		<script
-			src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-			integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-			crossorigin="anonymous"
-		></script>
-		<script
-			src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-			integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-			crossorigin="anonymous"
-		></script>
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-			integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-			crossorigin="anonymous"
-		></script>
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 		<script src="js/moment-locale.js"></script>
 
+		<script src="js/data-example.js"></script>
 		<script src="js/app.js"></script>
+
+		</script>
 
 		<script>
 			Calendar.run();
